--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,7 +1,4 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
@@ -9,7 +6,7 @@
             "name": "Current File",
             "request": "launch",
             "mainClass": "CombinedVolumeMixer",
-            "vmArgs": "--module-path \"C:/Program Files/Java/javafx-sdk-23.0.2/lib\" --add-modules javafx.controls,javafx.fxml,javafx.web"
+            "vmArgs": "--module-path \"C:/Program Files/Java/javafx-sdk-23.0.2/lib;lib\" --add-modules javafx.controls,javafx.fxml,javafx.web,com.sun.jna,com.sun.jna.platform"
         }
     ]
 }
