--- a/Codes/.vscode/launch.json
+++ b/Codes/.vscode/launch.json
@@ -3,10 +3,10 @@
     "configurations": [
         {
             "type": "java",
-            "name": "CombinedVolumeMixer",
+            "name": "Current File",
             "request": "launch",
             "mainClass": "CombinedVolumeMixer",
-            "vmArgs": "--module-path \"C:/Program Files/Java/javafx-sdk-23.0.2/lib\" --add-modules javafx.controls,javafx.fxml,javafx.web"
+            "vmArgs": "--module-path \"C:/Program Files/Java/javafx-sdk-23.0.2/lib;lib\" --add-modules javafx.controls,javafx.fxml,javafx.web,com.sun.jna,com.sun.jna.platform"
         }
     ]
 }
